--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-     "java.configuration.updateBuildConfiguration": "automatic"
+     "java.configuration.updateBuildConfiguration": "automatic",
+     "java.compile.nullAnalysis.mode": "automatic",
+     "umlet.fontBold": "Comic Sans MS",
+     "umlet.fontItalic": "Comic Sans MS",
+     "umlet.fontNormal": ""
 }
